# queuing-systems-and-networks

./: oneMachine.cpp  twoMachinesWithQueue.cpp
queueSystem/: CMakeCache.txt  CMakeLists.txt  Communicate.cpp  Communicate.h  CommunicatesStack.cpp  CommunicatesStack.h  DestinationMachine.cpp  DestinationMachine.h  MachineBlock.cpp  MachineBlock.h  Makefile  Statistics.cpp  Statistics.h  cmake_install.cmake  configuration  komunikaty  main.cpp
queueSystem/queue-interface/: app.js
queueSystem/queue-interface/public/: app.js  config.js  index.html  main.js  package.json  queueSystem.js  styles.css
queueSystem/queue-interface/public/communicationStack/: communicationStack.html  communicationStack.js
queueSystem/queue-interface/public/configurationPanel/: configurationPanel.html  configurationPanel.js
queueSystem/queue-interface/public/currentCommunicate/: currentCommunicate.html  currentCommunicate.js
queueSystem/queue-interface/public/lineChart/: lineChart.js
queueSystem/queue-interface/public/machineBlock/: machineBlock.html  machineBlock.js
queueSystem/queue-interface/public/systemConstants/: systemConstants.js
queueSystem/queue-interface/public/systemWatch/: systemWatch.js
